internal/xds/translator/testdata/out/xds-ir/http-route-multiple-matches.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - example.com
    name: first-listener/example.com
    routes:
    - match:
        pathSeparatedPrefix: /v1/example
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: envoy-gateway/httproute-2/rule/0/match/0/example.com
      route:
        cluster: envoy-gateway/httproute-2/rule/0/match/0/example.com
    - match:
        pathSeparatedPrefix: /v1/example
      name: envoy-gateway/httproute-3/rule/0/match/0/example.com
      route:
        cluster: envoy-gateway/httproute-3/rule/0/match/0/example.com
  - domains:
    - example.net
    name: first-listener/example.net
    routes:
    - match:
        headers:
        - name: version
          stringMatch:
            exact: one
        pathSeparatedPrefix: /v1/status
      name: envoy-gateway/httproute-4/rule/0/match/0/example.net
      route:
        cluster: envoy-gateway/httproute-4/rule/0/match/0/example.net
    - match:
        pathSeparatedPrefix: /v1/status
      name: envoy-gateway/httproute-5/rule/0/match/0/example.net
      route:
        cluster: envoy-gateway/httproute-5/rule/0/match/0/example.net
  - domains:
    - '*.com'
    name: first-listener/*.com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: envoy-gateway/httproute-1/rule/0/match/0/*.com
      route:
        cluster: envoy-gateway/httproute-1/rule/0/match/0/*.com
  - domains:
    - '*.net'
    name: first-listener/*.net
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: envoy-gateway/httproute-1/rule/0/match/0/*.net
      route:
        cluster: envoy-gateway/httproute-1/rule/0/match/0/*.net
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: envoy-gateway/httproute-1/rule/0/match/0/*
      route:
        cluster: envoy-gateway/httproute-1/rule/0/match/0/*
